[package]
name = "rm2fb-dec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r2pipe = "0.7.0"
serde_json = "1.0.91"
itertools = "0.8.0"
clap = { version = "4.1.4", features = ["derive"] }
anyhow = "1.0.69"
serde = { version = "1.0.152", features = ["derive"] }

